--- a/_posts/2018-12-31-silvestr.markdown
+++ b/_posts/2018-12-31-silvestr.markdown
@@ -13,3 +13,8 @@ Záznam Silvestrovského představení v roce 2018.
 
 <iframe src="https://player.vimeo.com/video/312259356?color=ffffff&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/312259356">Silvestrovsk&eacute; představen&iacute; 2018_č&aacute;st 2</a> from <a href="https://vimeo.com/regionkamera">REGIONKAMERA</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+Reportáž:
+
+<iframe src="https://player.vimeo.com/video/309021974?color=ffffff&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/309021974">Silvestrovsk&eacute; překvapen&iacute;</a> from <a href="https://vimeo.com/regionkamera">REGIONKAMERA</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
